$Id$


v0.61.3		25-Jul-2004

	upgrade:
		To reinstall the corrected macro templates go into the examples
		directory and type "make macros".
		In mbsetup menu 1.7 check the new items 15, 16 and 17.

	libmbse.a:
		Removed the fdn parameter from the attach and un_attach 
		functions, not needed anymore.
		Fixed function to return full 5d address in the outbound when
		the address is in a different zone then our own zone.

	libnodelist.a:
		Fixed IP port override if there is a port added to a protocol.

	mbfido:
		Changed netmail counters in the .msg import function.
		Fixed logging of 0 articles in scannews.
		With the command "mbfido areas" without the -q option the user
		must confirm this action.
		For netmails to uplinks for areamgr/filemgr changes, the wrong
		password was used.
		In large areamgr/filemgr responses each 2048 bytes was an extra
		<cr> inserted.

	mbfile:
		Fixed a bug where "mbfile k p i" didn't give the help screen.

	mbnewuser:
		Made questions for screenlen, newmail check and newfiles check
		dependant of settings in the setup.

	mbsebbs:
		When a netmail reply is done to a node without a valid address
		we ask the user if he wants to continue.
		Changed menu logging

	mbtask:
		Added defaults for questions for screenlen, newmail chack and
		newfiles check.
		When calling mbcico the address passed is now 5d.

	mbsetup:
		In menu 1.7 added 3 new items to ask new users for screenlen,
		newmail check and newfiles check.

	examples:
		Fixed 2 spelling errors in the dutch macro templates.
		Fixed another spelling error in the filemgr.help template of
		all languages.

	lang:
		Added language prompts 26 and 27.


v0.61.2		11-Jul-2004 - 25-Jul-2004

	upgrade:
		Check if /opt/mbse/var/msgs is empty before using this version.
		Make sure that /opt/mbse/queue is empty, then close the
		bbs with "mbstat close wait". Then do the upgrade.
		In mbsetup menu 1.14 update the TCP/IP connection details.